--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,6 @@
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <p>We can build a full webpage here</p>
-        <form>
-            <input type="text" name="nickname" placeholder="Enter your nickname"/>
-            <input type="submit" value="Submit"/>
-        </form>
-    </body>
+        <h1>Welcome Page!</h1>
+        </body>
 </html>
