--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,10 @@
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="../static/css/style.css">
+        print ("Hello penguins")
     </head>
     <body>
         <h1>Welcome Page!</h1>
         </body>
 </html>
+git check
